--- a/mvcdynamicforms_ef8fb2ed1afb/MvcDynamicForms.Demo/Views/Shared/_Layout.cshtml
+++ b/mvcdynamicforms_ef8fb2ed1afb/MvcDynamicForms.Demo/Views/Shared/_Layout.cshtml
@@ -21,11 +21,17 @@
                 </ul>
             </div>
         </div>
-        <div id="main">
+        @*<div id="main">
             @RenderBody()
         </div>
         <div id="footer">
+        </div>*@
+                <div id="main">
+            @RenderSection("MainContent", required: false)
+            <div id="footer">
+            </div>
         </div>
+
     </div>
 </body>
 </html>
